<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VisionGraph</string>
    <string name="title_section1">비전</string>
    <string name="title_section2">인생 그래프</string>
    <string name="title_section3">나의 비전</string>
    <string name="vision1">비전이란</string>
    <string name="bullet_point">•</string>
    <string name="vision1_content1a">\'비전은 자신이 누구이고, 어디로 가고 있으며, 무엇이 그 여정을 인도할지 아는 것이다\'</string>
    <string name="vision1_content1b">- 켄 블랜차드 &lt;비전으로 가슴을 뛰게 하라></string>
    <string name="vision1_content2">\'비전은 개인이 미래에 달성하고자 하는 모습이다.\'</string>
    <string name="vision1_content3">\'비전은 모든 사람들이 선호하고 창조하고자 하는 미래에 대한 그림이며, 나침반이다.\'</string>
    <string name="vision2">비전 발견</string>
    <string name="vision2_content1">희망사항과 꿈들은 무엇인가?</string>
    <string name="vision2_content2">꿈이 이루어진다면 나는 누구인가?</string>
    <string name="vision2_content3">나는 누구를 위해, 무엇을 위해 살고 싶은가?</string>
    <string name="vision2_content4">내 인생에서 나의 최고의 직업은 무엇인가?</string>
    <string name="vision_people">비전의 사람들</string>
    <string name="if_possible">모든 것이 가능하다면</string>
    <string name="my_vision1">어디서 무엇을 하고 싶은가?</string>
    <string name="my_vision2">나는 어떤 사람이 되고 싶은가?</string>
    <string name="my_vision3">나는 무엇을 위해서, 누구를 위해서 살고 싶은가?</string>
    <string name="vision_statement">나의 비전 선언문</string>
    <string name="done">완료</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
