<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/my_vision1"
                android:id="@+id/my_vision1"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp" />
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/menu1_line"
                android:layout_alignLeft="@id/my_vision1"
                android:layout_alignStart="@id/my_vision1"
                android:layout_alignRight="@id/my_vision1"
                android:layout_alignEnd="@id/my_vision1"
                android:contentDescription="@null"
                android:id="@+id/my_line1"
                android:layout_below="@id/my_vision1"/>
            <ImageButton
                android:id="@+id/edit_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_button"
                android:contentDescription="@null"
                android:layout_alignRight="@id/my_vision1"
                android:layout_alignEnd="@id/my_vision1"
                android:layout_below="@id/my_line1" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/my_vision1"
                android:layout_alignStart="@id/my_vision1"
                android:layout_toLeftOf="@id/edit_button1"
                android:layout_toStartOf="@id/edit_button1"
                android:id="@+id/my_vision1_answer"
                android:layout_below="@id/my_line1" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/my_vision2"
                android:id="@+id/my_vision2"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:layout_below="@id/edit_button1"/>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/menu1_line"
                android:layout_alignLeft="@id/my_vision1"
                android:layout_alignStart="@id/my_vision1"
                android:layout_alignRight="@id/my_vision1"
                android:layout_alignEnd="@id/my_vision1"
                android:contentDescription="@null"
                android:id="@+id/my_line2"
                android:layout_below="@id/my_vision2"/>
            <ImageButton
                android:id="@+id/edit_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_button"
                android:contentDescription="@null"
                android:layout_alignRight="@id/my_vision1"
                android:layout_alignEnd="@id/my_vision1"
                android:layout_below="@id/my_line2" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/my_vision1"
                android:layout_alignStart="@id/my_vision1"
                android:layout_alignRight="@id/my_vision1"
                android:layout_alignEnd="@id/my_vision1"
                android:id="@+id/my_vision2_answer"
                android:layout_below="@id/my_line2" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/my_vision3"
                android:id="@+id/my_vision3"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:layout_below="@id/edit_button2"/>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/menu1_line"
                android:layout_alignLeft="@id/my_vision1"
                android:layout_alignStart="@id/my_vision1"
                android:layout_alignRight="@id/my_vision1"
                android:layout_alignEnd="@id/my_vision1"
                android:contentDescription="@null"
                android:id="@+id/my_line3"
                android:layout_below="@id/my_vision3"/>
            <ImageButton
                android:id="@+id/edit_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_button"
                android:contentDescription="@null"
                android:layout_alignRight="@id/my_vision1"
                android:layout_alignEnd="@id/my_vision1"
                android:layout_below="@id/my_line3" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/my_vision1"
                android:layout_alignStart="@id/my_vision1"
                android:layout_alignRight="@id/my_vision1"
                android:layout_alignEnd="@id/my_vision1"
                android:id="@+id/my_vision3_answer"
                android:layout_below="@id/my_line3" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>